--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
   <div class="collapse navbar-collapse flex-row-reverse" id="navbar-navs">
     <ul class="navbar-nav text-center">
       <li class="nav-item">
-        <a href="#" class="nav-link">Войти</a>
+        <a href="/login" class="nav-link">Войти</a>
       </li>
       <li class="nav-item">
         <a href="#" class="nav-link">Зарегистрироваться</a>
