Added registration form.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -12,7 +12,7 @@
         <a href="/login" class="nav-link">Войти</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Зарегистрироваться</a>
+        <a class="nav-link" href="/registration">Зарегистрироваться</a>
       </li>
     </ul>
   </div>
