--- a/src/app/auth/auth-login-page/auth-login-page.component.html
+++ b/src/app/auth/auth-login-page/auth-login-page.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="logo text-center">
+    <div class="logo">
       <img src="/assets/images/kitten.jpg">
     </div>
   </div>
