--- a/src/app/auth/auth-login-page/auth-login-page.component.html
+++ b/src/app/auth/auth-login-page/auth-login-page.component.html
@@ -1,19 +1,19 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="logo">
-      <img src="/assets/images/kitten.jpg">
-    </div>
+    <img alt="" src="/assets/images/kitten.jpg">
   </div>
   <div class="row justify-content-center mt-4">
-    <form [formGroup]="formGroup" class="col-12 col-md-8 border rounded p-4" (submit)="submit()">
+    <form (submit)="submit()" [formGroup]="formGroup" class="col-12 col-md-8 bg-white border rounded p-4">
       <div class="form-group">
         <label for="email" class="label">Email address</label>
         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" formControlName="email">
       </div>
+
       <div class="form-group">
         <label for="password" class="label">Password</label>
         <input type="password" class="form-control" id="password" formControlName="password">
       </div>
+
       <button type="submit" class="btn btn-dark btn-block mt-4">Sign in</button>
     </form>
   </div>
