--- a/src/app/registration/registration-page/registration-page.component.html
+++ b/src/app/registration/registration-page/registration-page.component.html
@@ -1,8 +1,8 @@
-<div class="bg container-fluid py-5">
+<div class="container py-5">
   <div class="row justify-content-center">
-    <img src="/assets/images/kitten.jpg">
+    <img alt="" src="/assets/images/kitten.jpg">
   </div>
-  <div class="row justify-content-center mt-4 mx-1 mx-md-0">
+  <div class="row justify-content-center mt-4">
     <form (submit)="submit()" [formGroup]="formGroup" class="col-12 col-md-8 border rounded bg-white p-4">
       <div class="form-group">
         <label class="label" for="firstName">Имя</label>
@@ -29,7 +29,10 @@
         <input class="form-control" formControlName="passwordConfirm" id="confirmPassword" type="password">
       </div>
 
-      <button [disabled]="formGroup.invalid" class="btn btn-dark btn-block mt-4" type="submit">Let's go!</button>
+      <button [disabled]="formGroup.invalid"
+              class="btn btn-dark btn-block mt-4"
+              type="submit">Let's go!
+      </button>
     </form>
   </div>
 </div>
