--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  background: url("/assets/images/bg-2.jpg") no-repeat center center fixed;
+  background-size: cover;
+
+  body {
+    background-color: transparent;
+  }
+}
