--- a/src/app/themes/creating-theme-page/creating-theme-page.component.html
+++ b/src/app/themes/creating-theme-page/creating-theme-page.component.html
@@ -1,21 +1,2 @@
-<div class="container mt-5">
-  <div class="row justify-content-center mt-4">
-    <form (submit)="submit()"
-          [formGroup]="formGroup"
-          class="col-12 col-md-8 bg-white border rounded p-4">
-      <h3>Создать тему</h3>
-
-      <div class="form-group">
-        <label class="label" for="name">Название</label>
-        <input class="form-control" formControlName="name" id="name" type="text">
-      </div>
-
-      <div class="form-group">
-        <label class="label" for="description">Описание</label>
-        <textarea class="form-control" formControlName="description" id="description" rows="6" type="text"></textarea>
-      </div>
-
-      <button class="btn btn-dark btn-block mt-4" type="submit">Создать</button>
-    </form>
-  </div>
-</div>
+<app-theme-form (submit)="submit()" [(form)]="form" [buttonName]="'Создать'"
+                [formName]="'Создать тему'"></app-theme-form>
